--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run mypy
         uses: jpetrucciani/mypy-check@master
         with:
-          path: './src/inamer'
+          path: './itagger'
